--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,3 +1,3 @@
 install: 
-  - FILE="-Dfile=kashif_liveness-1.0.aar" 
-  - mvn install:install-file $FILE -DgroupId=com.sayika -DartifactId=liveness_say -Dversion=5.2 -Dpackaging=aar -DpomFile=pom.xml 
+  - FILE="-Dfile=liveness-1.0.aar" 
+  - mvn install:install-file $FILE -DgroupId=com.sayika -DartifactId=liveness_say -Dversion=5.2 -Dpackaging=aar -DpomFile=liveness-1.0.pom 
