--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,3 +1,3 @@
 install: 
 FILE="-Dfile=liveness-1.0.aar" 
-mvn install:install-file $FILE -DgroupId=com.ksf -DartifactId=liveness -Dversion=3.0 -Dpackaging=aar -DpomFile=liveness-1.0.pom
+mvn install:install-file $FILE -DgroupId=com.ksf -DartifactId=liveness -Dversion=3.0 -Dpackaging=aar -DpomFile=pom.xml
