--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ksf</groupId>
   <artifactId>liveness</artifactId>
+  <packaging>pom</packaging>
   <version>3.0</version>
   <dependencies>
     <dependency>
